[package]
name = "easl_cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "easl"
path = "src/main.rs"

[features]
default = ["interpreter"]
interpreter = ["easl/window"]

[dependencies]
easl = { git = "https://github.com/Ella-Hoeppner/easl" }
clap = { version = "4.0", features = ["derive"] }
notify = "8.2.0"

[profile.release]
# debug = true

# strip = true
# lto = true
